Fixed color contrast issue.

--- a/assets/css/sass/layout.scss
+++ b/assets/css/sass/layout.scss
@@ -477,6 +477,9 @@ h3 {
     .email {
         position: absolute;
         color: #fff;
+        &.el-link-sm:hover {
+            color: #fff;
+        }
         &:before {
             background-color: #f0ff32
         }
